--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 dependencies {
     // oedldoedl
     compile files("src/libs/oedldoedlcore-1.12.2-3.0.0.jar")
+    compile files("src/libs/oedldoedlresources-1.12.2-3.0.0.jar")
 
     // jei
     deobfCompile("curse.maven:jei-238222:4538010")
